# MySQLPool

./: CMakeLists.txt  README.md  main.cpp  mysql.ini
src/: conn.cpp  conn.h  connpool.cpp  connpool.h  log.h
